--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@types/node": "^20.3.1",
     "axios": "^1.4.0",
     "cheerio": "^1.0.0-rc.12",
+    "htmlparser2": "^9.0.0",
     "puppeteer": "^20.7.2",
     "ts-node": "^10.9.1",
     "tsc": "^2.0.4",
