--- a/powersearch/package.json
+++ b/powersearch/package.json
@@ -11,9 +11,12 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "axios": "^1.4.0",
+    "node-sass": "^9.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "sass": "^1.63.6",
+    "scss": "^0.2.4",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.3",
     "web-vitals": "^2.1.0"
