--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-scripts": "5.0.1",
     "sass": "^1.63.6",
     "scss": "^0.2.4",
+    "styled-components": "^6.0.7",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.3",
     "web-vitals": "^2.1.0"
